test/testdata/number/not_callable_error.lox
1(); // error: 'number' value is not callable
